# feedparser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  package.yaml  pyproject.toml  resources.json  run-hass.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  hassfest.yml  pull_request.yml
custom_components/: __init__.py
custom_components/feedparser/: manifest.json  sensor.py
custom_components/feedsparser/: manifest.json  sensor.py
custom_components/sensor/: feedparser.py
test_hass/: configuration.yaml
tests/: __init__.py  conftest.py  constants.py  download.py  feedsource.py  generate_ha_config.py  test_sensors.py
tests/data/: CTK.json  CTK.xml  alle_meldungen.json  alle_meldungen.xml  anp_nieuws.json  anp_nieuws.xml  api_met_no_metalerts.json  api_met_no_metalerts.xml  bbc_europe.json  bbc_europe.xml  buienradar_nl.json  buienradar_nl.xml  ct24.json  ct24.xml  nu_nl.json  nu_nl.xml  nu_nl_algemeen.json  nu_nl_algemeen.xml  skolmaten_se_ede_skola.json  skolmaten_se_ede_skola.xml  stern_auto.json  stern_auto.xml  zive.json  zive.xml
